--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -48,6 +48,13 @@
         right: 0.3rem;
       }
     }
+    .img-code{
+      height: 1rem;
+      position: absolute;
+      right: 0;
+      width: 2rem;
+    }
+  
   }
   .on-border {
     &::after {
