* [apply] 根据数据渲染页面

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -34,16 +34,16 @@ button, input, select,textarea{
 
 .top {
   margin-top: 0.3rem!important;
-}  
+}
 
-::-moz-placeholder { 
-  color: #ccc; 
+::-moz-placeholder {
+  color: #ccc;
 }
-::-webkit-input-placeholder { 
-  color:#ccc; 
+::-webkit-input-placeholder {
+  color:#ccc;
 }
-:-ms-input-placeholder { 
-  color:#ccc; 
+:-ms-input-placeholder {
+  color:#ccc;
 }
 
 .arrow-right {
@@ -57,4 +57,12 @@ button, input, select,textarea{
   transform: rotate(-45deg);
   top: 50%;
   margin-top: -6px;
+}
+
+.noscroll,
+.noscroll body {
+  overflow: hidden;
+}
+.noscroll body {
+  position: relative;
 }
