--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -16,7 +16,7 @@
       height: 1px;
       margin-top: -1px;
       top:100%;
-      left: 0;
+      left: 0.3rem;
     }
     .label {
       width: $form-label-width;
