--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -12,7 +12,7 @@
       position: absolute;
       content: '';
       border-bottom: 1px solid $form-border-color;
-      width: 100%;
+      width: 7.2rem;
       height: 1px;
       margin-top: -1px;
       top:100%;
