个人借款页面省市联动样式修改

--- a/src/scss/form.scss
+++ b/src/scss/form.scss
@@ -8,11 +8,12 @@
     background-color: #fff;
     height: 1rem;
     padding: 0 $padding-left;
+    overflow: hidden;
     &::after {
       position: absolute;
       content: '';
       border-bottom: 1px solid $form-border-color;
-      width: 7.2rem;
+      width: 100%;
       height: 1px;
       margin-top: -1px;
       top:100%;
