* [apply] 修改ui、bug修复

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -14,7 +14,7 @@ body, html, ol, ul, button, p{
 
 body {
   background-color: $bg-color;
-  font-family: PingFangSC;
+  font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "Heiti SC";
   overflow-x: hidden;
 }
 
